--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.iwannaskate": "I Wanna Skate",
   "item.iwannaskate.skateboard": "Skateboard",
   "item.iwannaskate.skateboard.made_of": "Made of",
+  "item.iwannaskate.skateboard.enchanted": "Enchantments:",
   "item.iwannaskate.skateboard.banner": "Pattern:",
   "item.iwannaskate.skateboard.banner_base_white": "White Banner",
   "item.iwannaskate.skateboard.banner_base_orange": "Orange Banner",
@@ -56,7 +57,10 @@
   "item.iwannaskate.skateboard.wheels_soul_flame": "Soul Flame Wheels",
   "item.iwannaskate.skateboard.wheels_rainbow": "Rainbow Wheels",
   "item.iwannaskate.skateboard.wheels_jack_o_lantern": "Jack O' Lantern Wheels",
+  "item.iwannaskate.skateboard.wheels_snowy": "Snowy Wheels",
   "item.iwannaskate.skateboard.wheels_shocking": "Shocking Wheels",
+  "item.iwannaskate.skateboard.wheels_honey": "Honey Wheels",
+  "item.iwannaskate.skateboard.wheels_aesthetic": "Aesthetic Wheels",
   "item.iwannaskate.skateboard_truck": "Skateboard Truck",
   "item.iwannaskate.skateboard_deck": "Skateboard Deck",
   "item.iwannaskate.shimmering_wax": "Shimmering Wax",
@@ -83,7 +87,10 @@
   "item.iwannaskate.skateboard_wheels_soul_flame": "Soul Flame Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_rainbow": "Rainbow Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_jack_o_lantern": "Jack O' Lantern Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_snowy": "Snowy Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_shocking": "Shocking Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_honey": "Honey Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_aesthetic": "Aesthetic Skateboard Wheels",
   "entity.iwannaskate.skateboard": "Skateboard",
   "entity.iwannaskate.skateboard.ground_warning": "Skateboards work best on smooth, solid ground",
   "entity.iwannaskate.skater_skeleton": "Skater Skeleton",
