--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -56,7 +56,7 @@
   "item.iwannaskate.skateboard.wheels_flame": "Flame Wheels",
   "item.iwannaskate.skateboard.wheels_soul_flame": "Soul Flame Wheels",
   "item.iwannaskate.skateboard.wheels_rainbow": "Rainbow Wheels",
-  "item.iwannaskate.skateboard.wheels_jack_o_lantern": "Jack O' Lantern Wheels",
+  "item.iwannaskate.skateboard.wheels_spooky": "Spooky Wheels",
   "item.iwannaskate.skateboard.wheels_snowy": "Snowy Wheels",
   "item.iwannaskate.skateboard.wheels_shocking": "Shocking Wheels",
   "item.iwannaskate.skateboard.wheels_honey": "Honey Wheels",
@@ -121,11 +121,21 @@
   "enchantment.iwannaskate.bashing.desc": "Skateboard is deals contact damage and increased melee damage when used as a weapon, damage scaled by level.",
   "enchantment.iwannaskate.onboarding": "Onboarding",
   "enchantment.iwannaskate.onboarding.desc": "Skateboard can be used by any mobs that walk over it, like a boat or minecart.",
+  "enchantment.iwannaskate.benthic": "Benthic",
+  "enchantment.iwannaskate.benthic.desc": "Skateboard can travel underwater unimpeded.",
+  "enchantment.iwannaskate.slow_motion": "Slow Motion",
+  "enchantment.iwannaskate.slow_motion.desc": "Skateboard slows down time for entities when speeding.",
+  "effect.iwannaskate.slow_motion": "Slow Motion",
+  "effect.iwannaskate.slow_motion.description": "Slows down the motion of the target",
   "iwannaskate.sound.subtitle.skateboard_pedal": "Pedalling foot",
   "iwannaskate.sound.subtitle.skateboard_rough_rolling_loop": "Skateboard wheels roll",
   "iwannaskate.sound.subtitle.skateboard_smooth_rolling_loop": "Skateboard wheels roll",
   "iwannaskate.sound.subtitle.skateboard_grind_loop": "Skateboard grinds",
   "iwannaskate.sound.subtitle.skateboard_change_pose": "Feet shift",
   "iwannaskate.sound.subtitle.skateboard_jump_start": "Skateboard wheels bounce",
-  "iwannaskate.sound.subtitle.skateboard_jump_land": "Skateboard wheels land"
+  "iwannaskate.sound.subtitle.skateboard_jump_land": "Skateboard wheels land",
+  "iwannaskate.sound.subtitle.skater_skeleton_idle": "Skater Skeleton rattles",
+  "iwannaskate.sound.subtitle.skater_skeleton_walk": "Footsteps",
+  "iwannaskate.sound.subtitle.skater_skeleton_hurt": "Skater Skeleton hurts",
+  "iwannaskate.sound.subtitle.skater_skeleton_dies": "Skater Skeleton dies"
 }
