--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -86,7 +86,7 @@
   "item.iwannaskate.skateboard_wheels_flame": "Flame Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_soul_flame": "Soul Flame Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_rainbow": "Rainbow Skateboard Wheels",
-  "item.iwannaskate.skateboard_wheels_jack_o_lantern": "Jack O' Lantern Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_spooky": "Spooky Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_snowy": "Snowy Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_shocking": "Shocking Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_honey": "Honey Skateboard Wheels",
@@ -137,5 +137,23 @@
   "iwannaskate.sound.subtitle.skater_skeleton_idle": "Skater Skeleton rattles",
   "iwannaskate.sound.subtitle.skater_skeleton_walk": "Footsteps",
   "iwannaskate.sound.subtitle.skater_skeleton_hurt": "Skater Skeleton hurts",
-  "iwannaskate.sound.subtitle.skater_skeleton_dies": "Skater Skeleton dies"
+  "iwannaskate.sound.subtitle.skater_skeleton_dies": "Skater Skeleton dies",
+  "advancements.iwannaskate.root.title": "I Wanna Skate",
+  "advancements.iwannaskate.root.desc": "Obtain Skateboard Wheels from a Skater Skeleton, the first step in building a Skateboard",
+  "advancements.iwannaskate.skateboard_deck.title": "Deck Tech",
+  "advancements.iwannaskate.skateboard_deck.desc": "Craft a Skateboard Deck from 3 wooden slabs",
+  "advancements.iwannaskate.skateboard.title": "Let's Roll",
+  "advancements.iwannaskate.skateboard.desc": "Obtain your first Skateboard",
+  "advancements.iwannaskate.take_skate_damage.title": "Next Time, Wear a Helmet",
+  "advancements.iwannaskate.take_skate_damage.desc": "Fall off a Skateboard",
+  "advancements.iwannaskate.trick_ollie.title": "Ollie Up",
+  "advancements.iwannaskate.trick_ollie.desc": "Preform an ollie",
+  "advancements.iwannaskate.trick_kickflip.title": "Can You Kick It?",
+  "advancements.iwannaskate.trick_kickflip.desc": "Preform a kickflip",
+  "advancements.iwannaskate.trick_grind.title": "Sparks Will Fly",
+  "advancements.iwannaskate.trick_grind.desc": "Grind on a wall, fence, bars or rail",
+  "advancements.iwannaskate.enchant_skateboard.title": "Powerboard",
+  "advancements.iwannaskate.enchant_skateboard.desc": "Enchant a Skateboard",
+  "advancements.iwannaskate.novelty_wheels.title": "Ride in Style",
+  "advancements.iwannaskate.novelty_wheels.desc": "Obtain a set of novelty wheels by trading with a Wandering Skater"
 }
