--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -61,10 +61,13 @@
   "item.iwannaskate.skateboard.wheels_shocking": "Shocking Wheels",
   "item.iwannaskate.skateboard.wheels_honey": "Honey Wheels",
   "item.iwannaskate.skateboard.wheels_aesthetic": "Aesthetic Wheels",
+  "item.iwannaskate.skateboard.skater_skeleton": "Undead's Skateboard",
+  "item.iwannaskate.skateboard.wandering_skater": "Wanderer's Skateboard",
   "item.iwannaskate.skateboard_truck": "Skateboard Truck",
   "item.iwannaskate.skateboard_deck": "Skateboard Deck",
   "item.iwannaskate.shimmering_wax": "Shimmering Wax",
   "item.iwannaskate.spawn_egg_skater_skeleton": "Skater Skeleton Spawn Egg",
+  "item.iwannaskate.spawn_egg_wandering_skater": "Wandering Skater Spawn Egg",
   "item.iwannaskate.skateboard_wheels": "Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_white": "White Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_orange": "Orange Skateboard Wheels",
@@ -94,6 +97,7 @@
   "entity.iwannaskate.skateboard": "Skateboard",
   "entity.iwannaskate.skateboard.ground_warning": "Skateboards work best on smooth, solid ground",
   "entity.iwannaskate.skater_skeleton": "Skater Skeleton",
+  "entity.iwannaskate.wandering_skater": "Wandering Skater",
   "death.attack.skate_0": "%s should have worn a helmet",
   "death.attack.skate_1": "%s tripped and stumbled",
   "death.attack.skate_2": "%s ate dirt",
