--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.iwannaskate.skateboard": "Skateboard",
   "item.iwannaskate.skateboard.made_of": "Made of",
   "item.iwannaskate.skateboard.enchanted": "Enchantments:",
+  "item.iwannaskate.skateboard.show_more": "Press [SHIFT] to show more",
   "item.iwannaskate.skateboard.banner": "Pattern:",
   "item.iwannaskate.skateboard.banner_base_white": "White Banner",
   "item.iwannaskate.skateboard.banner_base_orange": "Orange Banner",
@@ -94,6 +95,8 @@
   "item.iwannaskate.skateboard_wheels_shocking": "Shocking Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_honey": "Honey Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_aesthetic": "Aesthetic Skateboard Wheels",
+  "item.iwannaskate.pizza_slice": "Pizza Slice",
+  "tile.iwannaskate.pizza": "Pizza",
   "entity.iwannaskate.skateboard": "Skateboard",
   "entity.iwannaskate.skateboard.ground_warning": "Skateboards work best on smooth, solid ground",
   "entity.iwannaskate.skater_skeleton": "Skater Skeleton",
