--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -145,6 +145,12 @@
   "iwannaskate.sound.subtitle.skater_skeleton_walk": "Footsteps",
   "iwannaskate.sound.subtitle.skater_skeleton_hurt": "Skater Skeleton hurts",
   "iwannaskate.sound.subtitle.skater_skeleton_dies": "Skater Skeleton dies",
+  "iwannaskate.sound.subtitle.wandering_skater_idle": "Wandering Skater mumbles",
+  "iwannaskate.sound.subtitle.wandering_skater_hurt": "Wandering Skater hurts",
+  "iwannaskate.sound.subtitle.wandering_skater_die": "Wandering Skater dies",
+  "iwannaskate.sound.subtitle.wandering_skater_yes": "Wandering Skater agrees",
+  "iwannaskate.sound.subtitle.wandering_skater_no": "Wandering Skater disagrees",
+  "iwannaskate.sound.subtitle.wandering_skater_maybe": "Wandering Skater trades",
   "advancements.iwannaskate.root.title": "I Wanna Skate",
   "advancements.iwannaskate.root.desc": "Obtain Skateboard Wheels from a Skater Skeleton, the first step in building a Skateboard",
   "advancements.iwannaskate.skateboard_deck.title": "Deck Tech",
