--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -96,6 +96,8 @@
   "item.iwannaskate.skateboard_wheels_honey": "Honey Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_aesthetic": "Aesthetic Skateboard Wheels",
   "item.iwannaskate.pizza_slice": "Pizza Slice",
+  "item.iwannaskate.energy_drink": "Energy Drink",
+  "item.iwannaskate.energy_drink.no_sleep": "You cannot sleep while caffeinated",
   "tile.iwannaskate.pizza": "Pizza",
   "entity.iwannaskate.skateboard": "Skateboard",
   "entity.iwannaskate.skateboard.ground_warning": "Skateboards work best on smooth, solid ground",
@@ -132,8 +134,10 @@
   "enchantment.iwannaskate.benthic.desc": "Skateboard can travel underwater unimpeded.",
   "enchantment.iwannaskate.slow_motion": "Slow Motion",
   "enchantment.iwannaskate.slow_motion.desc": "Skateboard slows down time for entities when speeding.",
-  "effect.iwannaskate.slow_motion": "Slow Motion",
-  "effect.iwannaskate.slow_motion.description": "Slows down the motion of the target",
+  "effect.iwannaskate.high_octane": "High Octane",
+  "effect.iwannaskate.high_octane.description": "Slows the local flow of time when preforming a skate trick",
+  "effect.iwannaskate.overcaffeinated": "Overcaffeinated",
+  "effect.iwannaskate.overcaffeniated.description": "Distorts vision, shakes the inflicted entity and causes restlessness",
   "iwannaskate.sound.subtitle.skateboard_pedal": "Pedalling foot",
   "iwannaskate.sound.subtitle.skateboard_rough_rolling_loop": "Skateboard wheels roll",
   "iwannaskate.sound.subtitle.skateboard_smooth_rolling_loop": "Skateboard wheels roll",
@@ -168,5 +172,11 @@
   "advancements.iwannaskate.enchant_skateboard.title": "Powerboard",
   "advancements.iwannaskate.enchant_skateboard.desc": "Enchant a Skateboard",
   "advancements.iwannaskate.novelty_wheels.title": "Ride in Style",
-  "advancements.iwannaskate.novelty_wheels.desc": "Obtain a set of novelty wheels by trading with a Wandering Skater"
+  "advancements.iwannaskate.novelty_wheels.desc": "Obtain a set of novelty wheels by trading with a Wandering Skater",
+  "advancements.iwannaskate.wandering_skater.title": "Teenage Dirtbag",
+  "advancements.iwannaskate.wandering_skater.desc": "Meet a Wandering Skater, a traveller who's willing to share some of their skating goods",
+  "advancements.iwannaskate.energy_drink.title": "Poor Decision-Making Skills",
+  "advancements.iwannaskate.energy_drink.desc": "Buy an Energy Drink from a Wandering Skater",
+  "advancements.iwannaskate.slow_motion.title": "360 No-Scope",
+  "advancements.iwannaskate.slow_motion.desc": "Preform a skateboard trick in slow-motion with by having the High-Octane effect active"
 }
