--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -95,10 +95,13 @@
   "item.iwannaskate.skateboard_wheels_shocking": "Shocking Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_honey": "Honey Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_aesthetic": "Aesthetic Skateboard Wheels",
+  "item.iwannaskate.spiked_skater_helmet": "Spiked Skater Helmet",
+  "item.iwannaskate.spiked_skater_helmet.desc": "Adds contact damage when skateboarding",
   "item.iwannaskate.pizza_slice": "Pizza Slice",
   "item.iwannaskate.energy_drink": "Energy Drink",
   "item.iwannaskate.energy_drink.no_sleep": "You cannot sleep while caffeinated",
-  "tile.iwannaskate.pizza": "Pizza",
+  "block.iwannaskate.pizza": "Pizza",
+  "block.iwannaskate.skateboard_rack": "Skateboard Rack",
   "entity.iwannaskate.skateboard": "Skateboard",
   "entity.iwannaskate.skateboard.ground_warning": "Skateboards work best on smooth, solid ground",
   "entity.iwannaskate.skater_skeleton": "Skater Skeleton",
@@ -132,8 +135,8 @@
   "enchantment.iwannaskate.onboarding.desc": "Skateboard can be used by any mobs that walk over it, like a boat or minecart.",
   "enchantment.iwannaskate.benthic": "Benthic",
   "enchantment.iwannaskate.benthic.desc": "Skateboard can travel underwater unimpeded.",
-  "enchantment.iwannaskate.slow_motion": "Slow Motion",
-  "enchantment.iwannaskate.slow_motion.desc": "Skateboard slows down time for entities when speeding.",
+  "enchantment.iwannaskate.instant_return": "Instant Return",
+  "enchantment.iwannaskate.instant_return.desc": "Skateboard instantly returns to the inventory when dismounted.",
   "effect.iwannaskate.high_octane": "High Octane",
   "effect.iwannaskate.high_octane.description": "Slows the local flow of time when preforming a skate trick",
   "effect.iwannaskate.overcaffeinated": "Overcaffeinated",
@@ -178,5 +181,7 @@
   "advancements.iwannaskate.energy_drink.title": "Poor Decision-Making Skills",
   "advancements.iwannaskate.energy_drink.desc": "Buy an Energy Drink from a Wandering Skater",
   "advancements.iwannaskate.slow_motion.title": "360 No-Scope",
-  "advancements.iwannaskate.slow_motion.desc": "Preform a skateboard trick in slow-motion with by having the High-Octane effect active"
+  "advancements.iwannaskate.slow_motion.desc": "Preform a skateboard trick in slow-motion with by having the High-Octane effect active",
+  "advancements.iwannaskate.skate_10k.title": "Going the Distance",
+  "advancements.iwannaskate.skate_10k.desc": "Skate for over 10,000 blocks without stopping"
 }
