--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -99,6 +99,7 @@
   "item.iwannaskate.skateboard_wheels_aesthetic": "Aesthetic Skateboard Wheels",
   "item.iwannaskate.spiked_skater_helmet": "Spiked Skater Helmet",
   "item.iwannaskate.spiked_skater_helmet.desc": "Adds contact damage when skateboarding",
+  "item.iwannaskate.beanie": "Beanie",
   "item.iwannaskate.pizza_slice": "Pizza Slice",
   "item.iwannaskate.energy_drink": "Energy Drink",
   "item.iwannaskate.energy_drink.no_sleep": "You cannot sleep while caffeinated",
