--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -154,7 +154,7 @@
   "iwannaskate.sound.subtitle.skater_skeleton_idle": "Skater Skeleton rattles",
   "iwannaskate.sound.subtitle.skater_skeleton_walk": "Footsteps",
   "iwannaskate.sound.subtitle.skater_skeleton_hurt": "Skater Skeleton hurts",
-  "iwannaskate.sound.subtitle.skater_skeleton_dies": "Skater Skeleton dies",
+  "iwannaskate.sound.subtitle.skater_skeleton_die": "Skater Skeleton dies",
   "iwannaskate.sound.subtitle.wandering_skater_idle": "Wandering Skater mumbles",
   "iwannaskate.sound.subtitle.wandering_skater_hurt": "Wandering Skater hurts",
   "iwannaskate.sound.subtitle.wandering_skater_die": "Wandering Skater dies",
