--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -187,7 +187,7 @@
   "advancements.iwannaskate.slow_motion.desc": "Preform a skateboard trick in slow-motion with by having the High-Octane effect active",
   "advancements.iwannaskate.skate_10k.title": "Going the Distance",
   "advancements.iwannaskate.skate_10k.desc": "Skate for over 10,000 blocks without stopping",
-  "advancements.iwannaskate.skate_surfing.title": "Hurricane Waves",
+  "advancements.iwannaskate.skate_surfing.title": "Summer Elaine and Drunk Dori",
   "advancements.iwannaskate.skate_surfing.desc": "Skate on water with the Surfing enchantment",
   "advancements.iwannaskate.skate_bashing.title": "Vehicular Manslaughter",
   "advancements.iwannaskate.skate_bashing.desc": "Slay a mob by ramming into it with a Skateboard with the Bashing enchantment"
