--- a/src/main/resources/assets/iwannaskate/lang/en_us.json
+++ b/src/main/resources/assets/iwannaskate/lang/en_us.json
@@ -62,6 +62,8 @@
   "item.iwannaskate.skateboard.wheels_shocking": "Shocking Wheels",
   "item.iwannaskate.skateboard.wheels_honey": "Honey Wheels",
   "item.iwannaskate.skateboard.wheels_aesthetic": "Aesthetic Wheels",
+  "item.iwannaskate.skateboard.wheels_hover": "Hovering Wheels",
+  "item.iwannaskate.skateboard.wheels_emerald": "Emerald Wheels",
   "item.iwannaskate.skateboard.skater_skeleton": "Undead's Skateboard",
   "item.iwannaskate.skateboard.wandering_skater": "Wanderer's Skateboard",
   "item.iwannaskate.skateboard_truck": "Skateboard Truck",
@@ -97,9 +99,13 @@
   "item.iwannaskate.skateboard_wheels_shocking": "Shocking Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_honey": "Honey Skateboard Wheels",
   "item.iwannaskate.skateboard_wheels_aesthetic": "Aesthetic Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_hover": "Hovering Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_emerald": "Emerald Skateboard Wheels",
+  "item.iwannaskate.skateboard_wheels_emerald.desc": "Can be given to a Wandering Skater to encourage them to stay around",
   "item.iwannaskate.spiked_skater_helmet": "Spiked Skater Helmet",
   "item.iwannaskate.spiked_skater_helmet.desc": "Adds contact damage when skateboarding",
   "item.iwannaskate.beanie": "Beanie",
+  "item.iwannaskate.skater_cap": "Skater's Cap",
   "item.iwannaskate.pizza_slice": "Pizza Slice",
   "item.iwannaskate.energy_drink": "Energy Drink",
   "item.iwannaskate.energy_drink.no_sleep": "You cannot sleep while caffeinated",
@@ -183,12 +189,16 @@
   "advancements.iwannaskate.wandering_skater.desc": "Meet a Wandering Skater, a traveller who's willing to share some of their skating goods",
   "advancements.iwannaskate.energy_drink.title": "Poor Decision-Making Skills",
   "advancements.iwannaskate.energy_drink.desc": "Buy an Energy Drink from a Wandering Skater",
+  "advancements.iwannaskate.give_villager_drink.title": "You Monster",
+  "advancements.iwannaskate.give_villager_drink.desc": "Give a baby villager an Energy Drink to turn them into a Nitwit",
   "advancements.iwannaskate.slow_motion.title": "360 No-Scope",
   "advancements.iwannaskate.slow_motion.desc": "Preform a skateboard trick in slow-motion with by having the High-Octane effect active",
   "advancements.iwannaskate.skate_10k.title": "Going the Distance",
   "advancements.iwannaskate.skate_10k.desc": "Skate for over 10,000 blocks without stopping",
-  "advancements.iwannaskate.skate_surfing.title": "Summer Elaine and Drunk Dori",
+  "advancements.iwannaskate.skate_surfing.title": "I Wanna... Surf?",
   "advancements.iwannaskate.skate_surfing.desc": "Skate on water with the Surfing enchantment",
   "advancements.iwannaskate.skate_bashing.title": "Vehicular Manslaughter",
-  "advancements.iwannaskate.skate_bashing.desc": "Slay a mob by ramming into it with a Skateboard with the Bashing enchantment"
+  "advancements.iwannaskate.skate_bashing.desc": "Slay a mob by ramming into it with a Skateboard with the Bashing enchantment",
+  "cape.iwannaskate_cape_dev": "I Wanna Skate Developer",
+  "cape.iwannaskate_cape_betatester": "I Wanna Skate Beta Tester"
 }
