--- a/src/main/resources/assets/iwannaskate/lang/zh_cn.json
+++ b/src/main/resources/assets/iwannaskate/lang/zh_cn.json
@@ -68,7 +68,7 @@
   "item.iwannaskate.skateboard.wandering_skater": "流浪滑手的滑板",
   "item.iwannaskate.skateboard_truck": "滑板桥",
   "item.iwannaskate.skating_manual": "让滑板简单易学",
-  "item.iwannaskate.skating_manual.desc": "\"Radical\" Alex 著",
+  "item.iwannaskate.skating_manual.desc": "“激进”的Alex 著",
   "item.iwannaskate.skateboard_deck": "滑板板面",
   "item.iwannaskate.shimmering_wax": "闪光蜡",
   "item.iwannaskate.spawn_egg_skater_skeleton": "滑板骷髅刷怪蛋",
