--- a/src/main/resources/assets/iwannaskate/lang/zh_cn.json
+++ b/src/main/resources/assets/iwannaskate/lang/zh_cn.json
@@ -108,7 +108,7 @@
   "item.iwannaskate.skater_cap": "滑手帽",
   "item.iwannaskate.pizza_slice": "披萨片",
   "item.iwannaskate.energy_drink": "能量饮料",
-  "item.iwannaskate.energy_drink.no_sleep": "你无法在摄入过量咖啡因时入眠",
+  "item.iwannaskate.energy_drink.no_sleep": "你无法在摄入过量咖啡因后入眠",
   "block.iwannaskate.pizza": "披萨",
   "block.iwannaskate.skateboard_rack": "滑板架",
   "entity.iwannaskate.skateboard": "滑板",
