--- a/src/main/resources/assets/iwannaskate/lang/zh_cn.json
+++ b/src/main/resources/assets/iwannaskate/lang/zh_cn.json
@@ -102,10 +102,10 @@
   "item.iwannaskate.skateboard_wheels_hover": "悬浮滑板轮",
   "item.iwannaskate.skateboard_wheels_emerald": "绿宝石滑板轮",
   "item.iwannaskate.skateboard_wheels_emerald.desc": "你可以把它送给流浪滑手，鼓励他们留下来",
-  "item.iwannaskate.spiked_skater_helmet": "带刺滑手头盔",
+  "item.iwannaskate.spiked_skater_helmet": "带刺滑板头盔",
   "item.iwannaskate.spiked_skater_helmet.desc": "滑行时可以造成接触伤害",
   "item.iwannaskate.beanie": "无檐小便帽",
-  "item.iwannaskate.skater_cap": "滑手帽",
+  "item.iwannaskate.skater_cap": "滑板帽",
   "item.iwannaskate.pizza_slice": "披萨片",
   "item.iwannaskate.energy_drink": "能量饮料",
   "item.iwannaskate.energy_drink.no_sleep": "你无法在摄入过量咖啡因后入眠",
@@ -155,7 +155,7 @@
   "iwannaskate.sound.subtitle.skateboard_smooth_rolling_loop": "滑板轮：滚动",
   "iwannaskate.sound.subtitle.skateboard_grind_loop": "滑板：磨行",
   "iwannaskate.sound.subtitle.skateboard_change_pose": "变换姿势",
-  "iwannaskate.sound.subtitle.skateboard_jump_start": "滑板轮：弹跳",
+  "iwannaskate.sound.subtitle.skateboard_jump_start": "滑板轮：弹起",
   "iwannaskate.sound.subtitle.skateboard_jump_land": "滑板轮：落地",
   "iwannaskate.sound.subtitle.skater_skeleton_idle": "滑板骷髅：咯咯声",
   "iwannaskate.sound.subtitle.skater_skeleton_walk": "脚步声",
